# orga-drone

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
packaging/: README.md  orga-drone.spec  run_orga_drone.py
releases/1.1.0/: README.md
releases/1.2.0/: README.md
releases/1.3.1/: README.md
src/orga_drone/: __init__.py  __main__.py  app.py  config.py  desktop.py  ffmpeg_bin.py  flight_view.py  i18n.py  media_files.py  theme.py  thumbs.py
src/orga_drone/db/: __init__.py
src/orga_drone/dupes/: __init__.py
src/orga_drone/export/: __init__.py  spot.py
src/orga_drone/group/: __init__.py  sessions.py
src/orga_drone/locales/de/LC_MESSAGES/: messages.json  messages.po
src/orga_drone/locales/en/LC_MESSAGES/: messages.json  messages.po
src/orga_drone/ops/: __init__.py  merge.py  rename.py
src/orga_drone/parse/: __init__.py
src/orga_drone/scan/: __init__.py
src/orga_drone/static/css/: app.css
src/orga_drone/static/js/: flight.js  map.js  overlay.js  player.js  thumbs.js  track.js  ui.js
src/orga_drone/templates/: base.html  detail.html  duplicates.html  error.html  index.html  library.html
tests/: test_desktop.py  test_duplicates.py  test_flight_view.py  test_media_meta.py  test_sessions.py  test_spot_export.py  test_srt_track.py
